Imagenes y cambios en index
boton con transcisión a celeste

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         <body>
             <header>
-                <div class="Logo"><img src="imagenes/utem.jpg" alt="no esta" title="Logo utem" height="120" ></div>
+                <div class="Logo"><img id="Logo" src="imagenes/utem.jpg" alt="no esta" title="Logo utem" height="120"></div class="Logo">
                 <form>
                     <label for="name">Ingrese usuario:</label>
                     <input type="text" placeholder="Escribe usuario" name="name">
@@ -22,5 +22,7 @@
             <footer>
                 <p>UTEM</p>
             </footer>
+            <script type="text/javascript"></script>
+            <script src="script.js"></script>
         </body>
     </html>
